@@ -88,6 +88,15 @@
             template="browser/actions_panel.pt"
             layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
             permission="zope2.View" />
+        <!-- Enable history for Managers -->
+        <browser:page
+            for="imio.annex.content.annex.IAnnex"
+            name="actions_panel"
+            class="Products.PloneMeeting.browser.overrides.AnnexActionsPanelView"
+            template="browser/actions_panel.pt"
+            layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
+            permission="zope2.View" />
+
         <browser:page
             for="Products.PloneMeeting.interfaces.IMeetingFile"
             name="actions_panel"
