@@ -15,6 +15,7 @@
     <dependency>profile-imio.annex:default</dependency>
     <dependency>profile-imio.helpers:default</dependency>
     <dependency>profile-imio.pm.ws:default</dependency>
+    <dependency>profile-plone.app.versioningbehavior:default</dependency>
     <dependency>profile-plonetheme.imioapps:plonemeetingskin</dependency>
     <dependency>profile-Products.DataGridField:default</dependency>
     <dependency>profile-Products.PasswordStrength:default</dependency>
