@@ -1,6 +1,12 @@
 <?xml version="1.0"?>
 <repositorytool>
     <policymap>
+        <type name="annex">
+            <policy name="version_on_revert"/>
+        </type>
+        <type name="annexDecision">
+            <policy name="version_on_revert"/>
+        </type>
         <type name="meetingadvice">
             <policy name="version_on_revert"/>
         </type>
