@@ -238,6 +238,7 @@
         <tal:defines define="infos python: getattr(vdata.object, 'historized_item_data', []);
                              item context/getParentNode;
                              itemSchema item/Schema;"
+                     condition="python: context.portal_type in context.portal_plonemeeting.getAdvicePortalTypes(as_ids=True)"
                      i18n:domain="PloneMeeting">
           <h1 class="documentFirstHeading" i18n:translate="">Data of the item when advice was given</h1>
           <tal:loop repeat="data infos">
